syntax = "proto3";

package msg;

message Hello {
  string ident = 1;
}

enum AuthType {
  PUBKEY = 0;
}

message AuthAttempt {
  AuthType type = 1;
  bytes data = 2;
  string user = 3;
}

enum AuthChallengeType {
  SIGN = 0;
  REJECT = 1;
  ACCEPT = 2;
}

message AuthChallenge {
  AuthChallengeType type = 1;
  bytes nonce = 2;
}

message AuthResponse {
  bytes answer = 1;
  string format = 2;
}

message RequestExec {
  int64 id = 1;
  string command = 2;
  repeated string args = 3;
}

message RequestShell {
  int64 id = 1;
}

enum ControlCode {
  NOOP = 0;
  DATA = 1;
  CLOSE = 2;
  EXIT = 3;
}

message ControlMessage {
  int64 id = 1;
  ControlCode code = 2;
  int32 sub = 3;
  bytes data = 4;
  int32 exit_code = 5;
}
